feat: 完成 Lexical 编辑器的核心功能实现，包括环境准备、依赖安装、Vue 集成、编辑器配置管理及主题支持，新增 Lexical 编辑器测试组件，优化样式和调试信息展示

--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -11,9 +11,10 @@
   --ev-c-gray-2: #414853;
   --ev-c-gray-3: #32363f;
 
-  --ev-c-text-1: rgba(255, 255, 245, 0.86);
-  --ev-c-text-2: rgba(235, 235, 245, 0.6);
-  --ev-c-text-3: rgba(235, 235, 245, 0.38);
+  /* text */
+  --ev-c-text-1: rgba(0, 0, 0, 0.86);
+  --ev-c-text-2: rgba(0, 0, 0, 0.6);
+  --ev-c-text-3: rgba(0, 0, 0, 0.38);
 
   --ev-button-alt-border: transparent;
   --ev-button-alt-text: var(--ev-c-text-1);
