--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -31,6 +31,8 @@ code {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
   margin-bottom: 80px;
 }
 
