--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -26,9 +26,9 @@
 
 :root {
   /* 基础颜色变量 */
-  --color-background: var(--ev-c-black);
-  --color-background-soft: var(--ev-c-black-soft);
-  --color-background-mute: var(--ev-c-black-mute);
+  --color-background: var(--ev-c-white);
+  --color-background-soft: var(--ev-c-white-soft);
+  --color-background-mute: var(--ev-c-white-mute);
   --color-text: var(--ev-c-text-1);
   
   /* 扩展颜色变量 */
