feat: 添加 Prism.js 支持以增强代码高亮功能，更新相关组件以实现代码块的语法高亮和语言选择

--- a/src/renderer/src/components/playground/themes/PlaygroundEditorTheme.css
+++ b/src/renderer/src/components/playground/themes/PlaygroundEditorTheme.css
@@ -176,6 +176,28 @@
   position: relative;
   tab-size: 2;
 }
+
+.PlaygroundEditorTheme__codeLanguageLabel {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 8px;
+  color: #777;
+  text-align: right;
+  min-width: 25px;
+  user-select: none;
+  z-index: 1;
+  /* opacity: 0; */
+}
+
+.PlaygroundEditorTheme__codeLanguageLabel::before {
+  content: attr(data-language);
+}
+
+.PlaygroundEditorTheme__code:hover .PlaygroundEditorTheme__codeLanguageLabel {
+  opacity: 1;
+}
+
 .PlaygroundEditorTheme__code:before {
   content: attr(data-gutter);
   position: absolute;
